manifests/auth-provider/base/backend-migrate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-migrate-deployment
  labels:
    app: auth-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-provider
      server: backend-migrate
  template:
    metadata:
      labels:
        app: auth-provider
        server: backend-migrate
    spec:
      containers:
        - name: backend-migrate
          image: docker-registry.kuroweb.net/auth-provider-backend:placeholder
          command: [
              "/bin/sh",
              "-c",
              # TODO: CrashLoopBackOffの暫定対応としてRailsサーバを起動する
              "RAILS_ENV=production rails db:create && RAILS_ENV=production rails db:migrate && ./bin/rails server -b 0.0.0.0 -p 3000 -e production",
            ]
          resources:
            limits:
              cpu: "500m"
          volumeMounts:
            - name: op-private-key
              mountPath: /app/certs/private.pem
              subPath: OP_PRIVATE_KEY
              readOnly: true
      volumes:
        - name: op-private-key
          secret:
            secretName: backend-secret
