manifests/auth-provider/base/backend-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-db-service
spec:
  selector:
    app: auth-provider
    server: backend-db
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3306
      targetPort: 3306
  loadBalancerIP: 10.15.100.231

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-db-deployment
  labels:
    app: auth-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-provider
      server: backend-db
  template:
    metadata:
      labels:
        app: auth-provider
        server: backend-db
    spec:
      containers:
        - name: backend-db
          image: mysql/mysql-server:8.0
          ports:
            - name: http
              containerPort: 3306
          resources:
            limits:
              cpu: "500m"
              memory: "1000Mi"
          volumeMounts:
            - name: backend-db-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: backend-db-storage
          persistentVolumeClaim:
            claimName: backend-db-storage
