manifests/auth-provider/base/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: auth-provider
    server: backend
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  loadBalancerIP: 10.15.100.230

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: auth-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-provider
      server: backend
  template:
    metadata:
      labels:
        app: auth-provider
        server: backend
    spec:
      containers:
        - name: backend
          image: docker-registry.kuroweb.net/auth-provider-backend:placeholder
          command:
            [
              "./bin/rails",
              "server",
              "-b",
              "0.0.0.0",
              "-p",
              "3000",
              "-e",
              "production",
            ]
          ports:
            - name: http
              containerPort: 3000
          resources:
            limits:
              cpu: "800m"
          volumeMounts:
            - name: op-private-key
              mountPath: /app/certs/private.pem
              subPath: OP_PRIVATE_KEY
              readOnly: true
      volumes:
        - name: op-private-key
          secret:
            secretName: backend-secret
